fixed color contrast

--- a/Labs/Lab5/style.css
+++ b/Labs/Lab5/style.css
@@ -59,7 +59,7 @@ p, li, table {
 /* || header layout */
 
 div[class="nav"], article, footer, .secondary {
-  background-color: rgb(40, 131, 87);
+  background-color: rgb(58, 187, 125);
 }
 
 article, footer, .secondary {
